Fix create function dropdown menu alignment

--- a/frontend/packages/knative-plugin/src/components/functions/FunctionsPage.scss
+++ b/frontend/packages/knative-plugin/src/components/functions/FunctionsPage.scss
@@ -10,6 +10,7 @@
   }
 
   &__dropdown {
+    display: inline-block;
     padding-top: var(--pf-t--global--spacer--md);
   }
 }
